# LuminaLink

./: .env.example  .gitignore  CAMERA_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.tmp/: characters.sqlite  out.jsonl
.trae/documents/: Localization & Apple Silicon Optimization Plan.md
.trae/skills/vercel-composition-patterns/: SKILL.md
.trae/skills/vercel-react-native-skills/: SKILL.md
data/cache/: .gitkeep
data/characters/: characters.json
docs/: ARCHITECTURE.md  ERD.md  INTERFACES.md  PRD.md
docs/plans/: 2026-03-18-realtime-narration-design.md  2026-03-18-realtime-narration-implementation.md
documents/: FRD.md  PRD.md
src/: __init__.py  audio_detector.py  audio_input.py  camera_controller.py  character_recognizer.py  config.py  main.py  narrator.py  realtime_player.py  scene_analyzer.py  tts_engine.py  video_processor.py
src/gui/: __init__.py  camera_app.py
src/luminalink/: __init__.py  cli.py  config.py  selfcheck.py  types.py
src/luminalink/audio/: dialogue_webrtcvad.py
src/luminalink/input/: __init__.py  audio_ffmpeg.py  camera_input.py  video_file.py
src/luminalink/nlg/: __init__.py  generator.py  tf_template.py
src/luminalink/output/: __init__.py  jsonl_sink.py
src/luminalink/pipeline/: engine.py
src/luminalink/store/: __init__.py  character_store.py
src/luminalink/vision/: __init__.py  face_pipeline.py  object_detector.py  object_detector_torchvision.py  scene_change.py
tests/: test_modules.py  test_selfcheck.py
